--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -17,15 +17,15 @@
             <p>Use this site to find out birthdays in Nisum!!</p>
             <div>
                 <a href="/searchinrange">Search in a Range</a>
-                <a href="/thismonth">This month</a>
+                <a class="buttonTM" href="/thismonth">This month</a>
                 <a href="/nextmonth">Next Month</a>
             </div>
-            <label for="cars">Choose an option:</label>
+            {{!-- <label for="cars">Choose an option:</label>
             <select name="opt" id="searchopt">
                 <option value="1">Search in a range</option>
                 <option value="2">Birthdays of the month</option>
                 <option value="3">Birthdays of the next month</option>
-            </select>
+            </select> --}}
 
         </div>
     </div>
