--- a/templates/nextmonth.hbs
+++ b/templates/nextmonth.hbs
@@ -13,17 +13,17 @@
         <h1>{{title}}</h1>
     </div>
     <div class="main-content">
-        <div id="bodycontent">
+        <div id="bodycontent3">
             <p>Use this site to find out birthdays in Nisum!!</p>
             <div>
                 <a href="/searchinrange">Search in a Range</a>
-                <a href="/thismonth">This month</a>
+                <a class="buttonTM" href="/thismonth">This month</a>
                 <a href="/">Home</a>
                 
             </div>
+                <p id="message-5"></p>
             <div class="cajaresultados border border-muted" style="overflow-y: scroll; height: 25vh; border-radius: 3px; background-color: aqua;">  
-                <p id="message-1">{{subtitle}}</p>
-                <p id="message-2">{{results}}</p>
+                <p style="color: blue;" id="message-6"></p>
             </div>
         </div>
     </div>
