--- a/templates/searchinrange.hbs
+++ b/templates/searchinrange.hbs
@@ -17,15 +17,15 @@
             <p>Use this site to find out birthdays in Nisum!!</p>
             <div>
                 <a href="/">Home</a>
-                <a href="/thismonth">This month</a>
-                <a href="/nextmonth">Next Month</a>
+                <a href="/thismonth" class="buttonTM" >This month</a>
+                <a href="/nextmonth" class="buttonNM" >Next Month</a>
             </div>
             
-            <form id='formulario' action="getDates" method="post" style="padding: 2px 2px; border-radius: 3px; border: none;">
+            <form id='formulario' action="" style="padding: 2px 2px; border-radius: 3px; border: none;">
                 <div>
                     <label for="birthday">Start Date</label>
                     <input type="date" id="Startdate" name="startDate" class="form-control"
-                    value="2022-07-22"
+                    value="2022-01-01"
                     min="2022-01-01" max="2022-12-31">
                     <label for="birthday">End Date</label>
                     <input type="date" id="Enddate" name="endDate" class="form-control"
@@ -34,8 +34,8 @@
                     <input class="button" type="submit" value="Search!!">
                 </div>
             </form> 
-            <div class="cajaresultados border border-muted" style="overflow-y: scroll; height: 25vh; border-radius: 3px; background-color: aqua;">  
                 <p id="message-1"></p>
+            <div class="cajaresultados border border-muted" style="overflow-y: scroll; height: 25vh; border-radius: 3px; background-color: aqua;">  
                 <p id="message-2"></p>
             </div>
         </div>
