--- a/templates/thismonth.hbs
+++ b/templates/thismonth.hbs
@@ -13,17 +13,17 @@
         <h1>{{title}}</h1>
     </div>
     <div class="main-content">
-        <div id="bodycontent">
+        <div id="bodycontent2">
             <p>Use this site to find out birthdays in Nisum!!</p>
             <div>
                 <a href="/searchinrange">Search in a Range</a>
                 <a href="/">Home</a>
-                <a href="/nextmonth">Next month</a>
+                <a  href="/nextmonth" class="buttonNM">Next month</a>
                 
             </div>
+                <p id="message-3"></p>
             <div class="cajaresultados border border-muted" style="overflow-y: scroll; height: 25vh; border-radius: 3px; background-color: aqua;">  
-                <p id="message-1">{{subtitle}}</p>
-                <p id="message-2">{{results}}</p>
+                <p style="color: blue;" id="message-4"></p>
             </div>
         </div>
     </div>
@@ -31,6 +31,10 @@
     <div id="footer">
         <span>Created by FL</span>
     </div id="footer">
+    <!--<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    
+    </script>*/-->
 
     <script src="js/app.js"></script>
 </body>
