--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@ label{
     font-size: smaller;
     margin: 2% 1% 1% 1%;
 }
+
 #bodycontent{
     padding: 0% 2%;
 }
@@ -41,6 +42,7 @@ img{
     margin: 0px;
     padding: 0px;
 }
+
 button, .button{
     text-decoration: none;
     color: rgb(54, 5, 168);
@@ -50,9 +52,11 @@ button, .button{
     border-radius: 3px;
     border: none;
 }
+
 .button{
     cursor:grab;
 }
+
 a{
     text-decoration: none;
     color: rgb(54, 5, 168);
@@ -63,6 +67,7 @@ a{
     border: none;
     line-height: 2em;
 }
+
 a:hover{
     background-color: rgb(32, 3, 112);
     color: cyan;
@@ -72,6 +77,7 @@ a:hover{
     background-color: rgb(32, 3, 112);
     color: cyan;
 }
+
 #footer{
     border-top: 1px dotted rgb(2, 70, 172);
     margin-top: 10px;
@@ -80,6 +86,7 @@ a:hover{
     background-color: rgb(6, 108, 175);
     color:rgb(23, 4, 190)
 }
+
 #header{
     margin: 0;
     padding: 5px 10px;
@@ -91,24 +98,26 @@ a:hover{
     margin-top: 0%;
     padding: 1%;
     overflow-y: scroll; 
-    height: 35vh; 
+    height: 39vh; 
     border-radius: 3px; background-color: rgb(229, 247, 241);
+    margin-bottom: 1%;
 }
 
 #formulario{
     margin-top: 10px;
 }
 
-
 table {
     table-layout: fixed;
     width: 100%;
     border-collapse: collapse;
 }
+
 th{
     color:rgb(7, 7, 172); 
     background-color: rgb(4, 252, 252);
 }
+
 td{
     color:rgb(7, 7, 143);
     font-size: smaller;
