--- a/templates/views/betweenDates.hbs
+++ b/templates/views/betweenDates.hbs
@@ -9,18 +9,15 @@
     <title>Between Dates</title>
 </head>
 <body>
-    <div class="content">
-        {{>header}}
-    </div>
-    <div class="content-2">
-        <p>Cumpleaños en un intervalo de fechas: </p>
-    </div>
-    <div class="content-3">
-        <p>Tabla con los resultados</p>
-    </div>
-    
-    
+    <div class="main-content">
+        <div class="header-content">
+            {{>header}}
+        </div>
 
-    {{>footer}}
+        <div class="footer-content">
+            {{>footer}}
+        </div>
+        
+    </div>
 </body>
 </html>
