--- a/templates/views/currentMonth.hbs
+++ b/templates/views/currentMonth.hbs
@@ -10,20 +10,15 @@
     <title>Current Month</title>
 </head>
 <body>
-    <div class="content">
-        {{>header}}
-    </div>
-    <div class="content-2">
-        <p>Los cumpleaños de (Mes Actual), son los siguientes: </p>
-    </div>
-    <div class="content-3">
-        <p>Tabla con los resultados</p>
-    </div>
-    
+    <div class="main-content">
+        <div class="header-content">
+            {{>header}}
+        </div>
 
-    {{>footer}}
-    <script src="">
+        <div class="footer-content">
+            {{>footer}}
+        </div>
         
-    </script>
+    </div>
 </body>
 </html>
