--- a/templates/views/nextMonth.hbs
+++ b/templates/views/nextMonth.hbs
@@ -9,16 +9,15 @@
     <title>Next Month</title>
 </head>
 <body>
-    <div class="content">
-        {{>header}}
+    <div class="main-content">
+        <div class="header-content">
+            {{>header}}
+        </div>
+
+        <div class="footer-content">
+            {{>footer}}
+        </div>
+        
     </div>
-    <div class="content-2">
-        <p>Los cumpleaños de (Sgte Mes), son los siguientes: </p>
-    </div>
-    <div class="content-3">
-        <p>Tabla con los resultados</p>
-    </div>
-    
-    {{>footer}}
 </body>
 </html>
