--- a/templates/views/nextMonth.hbs
+++ b/templates/views/nextMonth.hbs
@@ -14,10 +14,24 @@
             {{>header}}
         </div>
 
+        <div class="text-content">
+            <form action="">
+                <label for="">Press this button to serach the next month birthdays</label>
+             <button>Search</button>
+            </form>
+        </div>
+
+        <div class="table-content">
+            <table class="table-results">
+
+            </table>
+        </div>
+
         <div class="footer-content">
             {{>footer}}
         </div>
         
     </div>
+    <script src="/js/app.js"></script>
 </body>
 </html>
