--- a/templates/views/nextMonth.hbs
+++ b/templates/views/nextMonth.hbs
@@ -15,7 +15,7 @@
         </div>
 
         <div class="text-content">
-            <form action="">
+            <form id="form2" action="">
                 <label for="">Press this button to serach the next month birthdays</label>
              <button>Search</button>
             </form>
