--- a/templates/views/currentMonth.hbs
+++ b/templates/views/currentMonth.hbs
@@ -16,7 +16,7 @@
         </div>
 
         <div class="text-content">
-            <form>
+            <form class="form1">
                 <label for="">Press this button to serach the current month birthdays</label>
                 <button>Search</button>
             </form>
