--- a/templates/views/nextMonth.hbs
+++ b/templates/views/nextMonth.hbs
@@ -16,9 +16,9 @@
         </div>
 
         <div class="text-content">
-            <form id="form2" action="">
+            <form class="form2" action="">
                 <label for="">Press this button to serach the next month birthdays</label>
-             <button>Search</button>
+             <button class="button-NM">Search</button>
             </form>
         </div>
 
