--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,17 @@
 <body>
     <div class="main-content">
         <div class="header-content">
-            {{>header}}
+            <h1>{{title}}</h1>
+            <a href="/currentMonth">Current Month</a>
+            <a href="/nextMonth">Next Month</a>
+            <a href="/betweenDates">Between Dates</a>
+        </div>
+
+         <div class="text-content">
+            <h1>Hola....</h1>
+        </div>
+           <div class="table-content">
+            
         </div>
 
         <div class="footer-content">
