--- a/templates/views/nextMonth.hbs
+++ b/templates/views/nextMonth.hbs
@@ -16,15 +16,16 @@
         </div>
 
         <div class="text-content">
-            <form class="form2" action="">
-                <label for="">Press this button to serach the next month birthdays</label>
-             <button class="button-NM">Search</button>
+            <form class="">
+                <label for="">Press this button to serach the current month birthdays</label>
+                <button>Search</button>
             </form>
         </div>
 
         <div class="table-content">
-            <table class="table-results">
-
+            <table class="table">
+                <thead></thead>
+                <tbody></tbody>
             </table>
         </div>
 
@@ -33,6 +34,6 @@
         </div>
         
     </div>
-    <script src="/js/app.js"></script>
+    <script src="/js/nextMonth.js"></script>
 </body>
 </html>
