--- a/templates/views/betweenDates.hbs
+++ b/templates/views/betweenDates.hbs
@@ -9,9 +9,23 @@
     <title>Between Dates</title>
 </head>
 <body>
-    <div class="main-content">
+   <div class="main-content">
         <div class="header-content">
             {{>header}}
+        </div>
+
+        <div class="text-content">
+            <form class="">
+                <label for="">Press this button to serach the current month birthdays</label>
+                <button>Search</button>
+            </form>
+        </div>
+
+        <div class="table-content">
+            <table class="table">
+                <thead></thead>
+                <tbody></tbody>
+            </table>
         </div>
 
         <div class="footer-content">
