--- a/templates/views/currentMonth.hbs
+++ b/templates/views/currentMonth.hbs
@@ -16,15 +16,16 @@
         </div>
 
         <div class="text-content">
-            <form class="form1">
+            <form class="">
                 <label for="">Press this button to serach the current month birthdays</label>
                 <button>Search</button>
             </form>
         </div>
 
         <div class="table-content">
-            <table class="table-results">
-
+            <table class="table">
+                <thead></thead>
+                <tbody></tbody>
             </table>
         </div>
 
