--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,10 +11,7 @@
 <body>
     <div class="main-content">
         <div class="header-content">
-            <h1>{{title}}</h1>
-            <a href="/currentMonth">Current Month</a>
-            <a href="/nextMonth">Next Month</a>
-            <a href="/betweenDates">Between Dates</a>
+           {{>header}}
         </div>
 
          <div class="text-content">
