--- a/templates/views/currentMonth.hbs
+++ b/templates/views/currentMonth.hbs
@@ -17,7 +17,7 @@
 
         <div class="text-content">
             <form class="">
-                <label for="">Press this button to serach the current month birthdays</label>
+                <label for="">Press this button to search the current month birthdays</label>
                 <button>Search</button>
             </form>
         </div>
