--- a/templates/views/nextMonth.hbs
+++ b/templates/views/nextMonth.hbs
@@ -17,7 +17,7 @@
 
         <div class="text-content">
             <form class="">
-                <label for="">Press this button to serach the current month birthdays</label>
+                <label for="">Press this button to search the current month birthdays</label>
                 <button>Search</button>
             </form>
         </div>
@@ -34,6 +34,5 @@
         </div>
         
     </div>
-    <script src="/js/nextMonth.js"></script>
 </body>
 </html>
