Actualizacion de revisión PR

--- a/templates/views/next-month.hbs
+++ b/templates/views/next-month.hbs
@@ -18,6 +18,8 @@
 
         {{>footer}}
     
-    <script src="/js/next-month.js"></script>
+    <script src="/js/helper.js"></script>
+    <!--<script src="/js/script.js"></script>-->
+
     </body>
 </html>
