--- a/templates/views/form.hbs
+++ b/templates/views/form.hbs
@@ -26,7 +26,9 @@
       <table id="table"></table>
     
     {{>footer}}
+    
+    <script src="/js/helper.js"></script>
+    <script src="/js/form.js"></script>
 
-  <script src="/js/script.js"></script>
   </body>
 </html>
