--- a/templates/views/next-month.hbs
+++ b/templates/views/next-month.hbs
@@ -19,7 +19,7 @@
         {{>footer}}
     
     <script src="/js/helper.js"></script>
-    <!--<script src="/js/script.js"></script>-->
+    <script src="/js/next-month.js"></script>
 
     </body>
 </html>
