con archivo router

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,7 +18,7 @@
         <div class="text-content" style="align-items:center;">
             
             <div class="row" style="margin: 7% 2%;"><a href="/current-month">Current Month</a></div>
-            <div class="row" style="margin: 7% 2%;"><a href="/nextMonth">Next Month</a></div>
+            <div class="row" style="margin: 7% 2%;"><a href="/next-month">Next Month</a></div>
             <div class="row" style="margin: 7% 2%;"><a href="/between-dates">Between Dates</a></div>
             
         </div>
