--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="/current-month">Current Month</a></li>
                 <br>
-                <li><a href="/nextMonth">Next Month</a></li>
+                <li><a href="/next-month">Next Month</a></li>
                 <br>
                 <li><a href="/between-dates">Between Dates</a></li>
             </ul>
